# Enterprise-RAG-Challenge

./: demo.py  homenote.ipynb
codebase/: README.md  main.py  pyproject.toml  requirements.txt  start_visualization.bat
codebase/Guideline/: Operational_Diary.md  README_zh.md  Subset_CSV_Analysis.md
codebase/data/test_set/: answers_gemini_thinking_fc.json  answers_gemini_thinking_fc_debug.json  questions.json
codebase/scripts/: check_uv_environment.py
codebase/src/: pdf_parsing.py  pipeline.py
codebase/visualization/: README.md  app.py  requirements_viz.txt  run.py  test_setup.py
codebase/visualization/components/: __init__.py  data_loader.py  json_viewer.py  pdf_viewer.py  stats_viewer.py
